--- a/html/register.html
+++ b/html/register.html
@@ -85,7 +85,8 @@
 
   <!-- Submit button -->
   <div class="sign-in d-flex justify-content-center">
-    <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block mb-3">Sign in</button>
+    <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block mb-3">
+      <a href="https://www.facebook.com/sup.bro.hi.day.ne" class="text-light">Sign In</a></button>
   </div>
 </form>
 </div>
