--- a/html/customer_manager.html
+++ b/html/customer_manager.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Store</title>
+    <title>Customer Manager</title>
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link
@@ -49,46 +48,10 @@
         </ul>
     </div>
 </div>
-
-<main>
-    <div class="container">
-        <div class="products">
-            <div class="product">
-                <img src="https://placehold.co/300" alt="">
-                <h3>Product Name</h3>
-                <h5>$99.99</h5>
-                <button disabled>Add to Cart</button>
-            </div>
-            <div class="product">
-                <img src="https://placehold.co/300" alt="">
-                <h3>Product Name</h3>
-                <h5>$99.99</h5>
-                <button>Add to Cart</button>
-            </div>
-            <div class="product">
-                <img src="https://placehold.co/300" alt="">
-                <h3>Product Name</h3>
-                <h5>$99.99</h5>
-                <button>Add to Cart</button>
-            </div>
-            <div class="product">
-                <img src="https://placehold.co/300" alt="">
-                <h3>Product Name</h3>
-                <h5>$99.99</h5>
-                <button>Add to Cart</button>
-            </div>
-            <div class="product">
-                <img src="https://placehold.co/300" alt="">
-                <h3>Product Name</h3>
-                <h5>$99.99</h5>
-                <button>Add to Cart</button>
-            </div>
-        </div>
-    </div>
-</main>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="script.js"></script>
+
 </body>
 </html>
