--- a/html/employee_manager.html
+++ b/html/employee_manager.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Employee manager</title>
+    <title>Employee Manager</title>
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link
@@ -14,6 +14,16 @@
         /* Custom styles for the sidebar */
         .offcanvas-start {
             width: 250px;
+        }
+        th, td{
+            padding: 10px;
+            border: 1px solid #ddd;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+        tr:hover {
+            background-color: #f5f5f5;
         }
     </style>
 </head>
@@ -48,6 +58,168 @@
         </ul>
     </div>
 </div>
+
+<main>
+    <h1 class="h1 text-center">Bảng Danh Sách Nhân Viên</h1>
+    <table class="container ollapse w-50 p-3 ">
+        <tr>
+            <th>ID</th>
+            <th>Tên</th>
+            <th>Email</th>
+            <th>Phone</th>
+            <th>Cccd</th>
+            <th>Date of birth</th>
+            <th></th>
+            <th></th>
+        </tr>
+        <tr>
+            <td>NV_234</td>
+            <td>Đặng Lê Thành Công</td>
+            <td>cong234@gmai.com</td>
+            <td>0912313212</td>
+            <td>079123123123</td>
+            <td>2/3/2000</td>
+            <td>
+                <button type="button" class="btn btn-primary" onclick="window.location.href='../html/edit/edit_employee.html'">
+                    Edit
+                </button>
+            </td>
+            <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Delete
+            </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">Notification</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+
+                                Are you sure you want to delete the object from the list?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary " data-bs-dismiss="modal">Delete</button>
+                            </div>
+                        </div>
+                    </div>
+                </div></td>
+        </tr>
+        <tr>
+            <td>NV_345</td>
+            <td>Nguyễn Danh Long</td>
+            <td>long345@gmai.com</td>
+            <td>0912313212</td>
+            <td>079123123123</td>
+            <td>3/4/2000</td>
+            <td>
+                <button type="button" class="btn btn-primary" onclick="window.location.href='../html/edit/edit_employee.html'">
+                    Edit
+                </button>
+            </td>
+            <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Delete
+            </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">Notification</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+
+                                Are you sure you want to delete the object from the list?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary " data-bs-dismiss="modal">Delete</button>
+                            </div>
+                        </div>
+                    </div>
+                </div></td>
+        </tr>
+        <tr>
+            <td>KH_456</td>
+            <td>Vũ Phúc Kỳ</td>
+            <td>ky456@gmai.com</td>
+            <td>0912313212</td>
+            <td>079123123123</td>
+            <td>4/5/2000</td>
+            <td>
+                <button type="button" class="btn btn-primary" onclick="window.location.href='../html/edit/edit_employee.html'">
+                    Edit
+                </button>
+            </td>
+            <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Delete
+            </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">Notification</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+
+                                Are you sure you want to delete the object from the list?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary " data-bs-dismiss="modal">Delete</button>
+                            </div>
+                        </div>
+                    </div>
+                </div></td>
+        </tr>
+        <tr>
+            <td>KH_123</td>
+            <td>Nguyễn Phú Quang</td>
+            <td>quang123@gmai.com</td>
+            <td>0912313212</td>
+            <td>079123123123</td>
+            <td>1/2/2002</td>
+            <td>
+
+                <button type="button" class="btn btn-primary" onclick="window.location.href='../html/edit/edit_employee.html'">
+                    Edit
+                </button>
+
+            </td>
+            <td>
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    Delete
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">Notification</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+
+                                Are you sure you want to delete the object from the list?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary " data-bs-dismiss="modal">Delete</button>
+                            </div>
+                        </div>
+                    </div>
+                </div></td>
+        </tr>
+</main>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
