--- a/html/employee_manager.html
+++ b/html/employee_manager.html
@@ -54,7 +54,7 @@
             <li class="list-group-item"><a href="./employee_manager.html">Employee Manager</a></li>
             <li class="list-group-item"><a href="./customer_manager.html">Customer Manager</a></li>
             <li class="list-group-item"><a href="./product_manager.html">Product Manager</a></li>
-            <li class="list-group-item"><a href="./login.html">Log Out</a></li>
+            <li class="list-group-item"><a href="./login2.html">Log Out</a></li>
         </ul>
     </div>
 </div>
@@ -125,11 +125,11 @@
             </button>
 
                 <!-- Modal -->
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal fade"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="exampleModalLabel">Notification</h1>
+                                <h1 class="modal-title fs-5" >Notification</h1>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
@@ -161,11 +161,11 @@
             </button>
 
                 <!-- Modal -->
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal fade"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="exampleModalLabel">Notification</h1>
+                                <h1 class="modal-title fs-5" >Notification</h1>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
@@ -200,11 +200,11 @@
                 </button>
 
                 <!-- Modal -->
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal fade"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="exampleModalLabel">Notification</h1>
+                                <h1 class="modal-title fs-5" >Notification</h1>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
@@ -217,8 +217,15 @@
                             </div>
                         </div>
                     </div>
-                </div></td>
+                </div>
+            </td>
         </tr>
+    </table>
+    <div class="text-center m-2">
+        <button type="button" class="btn btn-primary" onclick="window.location.href='../html/add/addNewEmployee.html'">
+            Add
+        </button>
+    </div>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
