--- a/html/product_manager.html
+++ b/html/product_manager.html
@@ -54,7 +54,7 @@
             <li class="list-group-item"><a href="./employee_manager.html">Employee Manager</a></li>
             <li class="list-group-item"><a href="./customer_manager.html">Customer Manager</a></li>
             <li class="list-group-item"><a href="./product_manager.html">Product Manager</a></li>
-            <li class="list-group-item"><a href="./login.html">Log Out</a></li>
+            <li class="list-group-item"><a href="./login2.html">Log Out</a></li>
         </ul>
     </div>
 </div>
